--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@heroicons/react": "^2.2.0",
     "@syncfusion/ej2-react-charts": "^29.1.35",
     "@tinymce/tinymce-react": "^6.1.0",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,10 +23,13 @@
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "recharts": "^2.15.2",
+    "styled-components": "^6.1.17",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
   },
