--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^15.2.4",
     "postcss": "^8.5.3",
     "quill": "^2.0.3",
+    "quill-better-table": "^1.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
